# safe-cpp

./: README.md  topics.md
.github/workflows/: build-docs.yml  static.yml
docs/: CNAME  P3390R0.html  P3444R0.html  draft-lifetimes.html  draft.html  index.html
libsafecxx/: CMakeLists.txt  README.md
libsafecxx/cmake/: safecxx-config.cmake.in
libsafecxx/include/: std2.h
libsafecxx/include/std2/: arc.h  atomic.h  box.h  cell.h  expected.h  initializer_list.h  io.h  iterator.h  mutex.h  optional.h  panic.h  rc.h  ref_cell.h  shared_mutex.h  slice.h  source_location.h  string.h  string_constant.h  string_view.h  string_view.hxx  thread.h  tuple.h  type_traits.h  unique_ptr.h  utility.h  vector.h
libsafecxx/include/std2/__config/: config.h
libsafecxx/include/std2/__magic/: magic.h
libsafecxx/include/std2/__panic/: codes.h
libsafecxx/include/std2/__slice/: slice.h
libsafecxx/single-header/: std2.h
libsafecxx/src/: hello_world.cxx
libsafecxx/test/: CMakeLists.txt  arc_test.cxx  box_test.cxx  helpers.h  initializer_list_test.cxx  lightweight_test.h  match_test.cxx  optional_test.cxx  ptr1.cxx  ptr2.cxx  rc_test.cxx  ref_cell_test.cxx  source_location_test.cxx  string_test.cxx  string_view_test.cxx  sync.cxx  thread_test.cxx  tuple_test.cxx  vector_test.cxx
libsafecxx/test/broken/: box_variadic_make.cxx  cell_box_uaf.cxx  optional.cxx  optional_take_if.cxx  optional_take_if2.cxx  rc.cxx  rc_segfault.cxx  ref_cell.cxx  self_reference.cxx
libsafecxx/test/compile-fail/: abort_handler.cxx  arc1.cxx  array1.cxx  box1.cxx  box2.cxx  box_incomplete.cxx  box_thread.cxx  cell1.cxx  cell2.cxx  cell3.cxx  cell_box_uaf.cxx  manually_drop1.cxx  mutex1.cxx  mutex2.cxx  mutex3.cxx  rc1.cxx  ref_cell1.cxx  ref_cell2.cxx  string_view1.cxx  thread1.cxx  thread2.cxx  thread3.cxx  thread4.cxx  throw1.cxx  unsafe_cell1.cxx  vector1.cxx  vector2.cxx
libsafecxx/test/compile-fail/panic/: divide_overflow.cxx  divide_zero.cxx  optional1.cxx  optional2.cxx  optional3.cxx  subscript_array.cxx  subscript_slice.cxx  vector1.cxx
libsafecxx/test/compile-fail/unsafe/: asm.cxx  global_mutable.cxx  object_mutable.cxx  pointer_dereference.cxx  pointer_difference.cxx  pointer_offset.cxx  pointer_unsafe.cxx  union.cxx  unsafe_function.cxx
lifetimes/: P3444R0.md  draft-lifetimes.md  exclusive1.cxx  lifetimes1.cxx  lifetimes2.cxx  lifetimes3.cxx  lifetimes4.cxx  lifetimes5.cxx  vector1.cxx  vector2.cxx  vector3.cxx  vector4.cxx
proposal/: CMakeLists.txt  P3390R0.md  box.cxx  cell.cxx  choice.cxx  draft.html  draft.md  drop.cxx  drop.rs  drop2.cxx  get.cxx  initlist0.cxx  initlist1.cxx  intro.md  issues.md  iterator.cxx  match.cxx  match1.cxx  match2.cxx  move.cxx  mut.cxx  mut2.cxx  rel1.cxx  safe.cxx  safe.md  string_view.cxx  string_view0.cxx  string_view1.cxx  subscript_array.cxx  subscript_vector.cxx  thread_safety.cxx  tour.md  tuple1.cxx  type.md  union.cxx  unsafe2.cxx  unsafe3.cxx  unsafe4.cxx  unsafe5.cxx  unsafe_bounds.cxx  (+2 more)
proposal/circle-docs/: index.md  integration.cxx  lifetime.md  roadmap.md  thread.md  toc.md  topics.md  type.md
